cluster/manifests/runner/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: runner
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: runner
  mtls:
    mode: STRICT
