cluster/manifests/runner/overlays/dev/sidecar.yaml
# Use ambient mesh to avoid istio-cni + initContainer problems with istio-proxy(kaniko cannot work with uid 1337)
#apiVersion: networking.istio.io/v1
#kind: Sidecar
#metadata:
#  name: runner
#spec:
#  workloadSelector:
#    labels:
#      app.kubernetes.io/name: runner
#  outboundTrafficPolicy:
#    mode: ALLOW_ANY
#  egress:
#    - captureMode: DEFAULT
#      hosts:
#        - ./github.com
#        - ./api.github.com
#        - ./objects.githubusercontent.com
#        - ./auth.docker.io
#        - ./production.cloudflare.docker.com
#        - ./actions-results-receiver-production.githubapp.com
#        - ./results-receiver.actions.githubusercontent.com
#        - ./vstoken.actions.githubusercontent.com
#        - ./*.blob.core.windows.net
#        - ./*.actions.githubusercontent.com
#        - ./archive.ubuntu.com
#        - token-request-server/token-request-server.token-request-server.svc.cluster.local
#        - httpbin/httpbin-istio.httpbin.svc.cluster.local
#        - cortex-api/cortex-api.cortex-api.svc.cluster.local
#        - pushgateway-statsd/pushgateway-statsd.pushgateway-statsd.svc.cluster.local
#        - hippocampus-dev-github-token-server/hippocampus-dev-github-token-server.hippocampus-dev-github-token-server.svc.cluster.local
#        - github-actions-runner-controller/github-actions-runner-controller-registry.github-actions-runner-controller.svc.cluster.local
#        - istio-system/istiod.istio-system.svc.cluster.local
#        - otel/otel-agent.otel.svc.cluster.local
#---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: hippocampus
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: hippocampus
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./api.github.com
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
